# ParsDb

./: .env  .gitignore  README.md  database.db  main.py  pyproject.toml
db/: requirements.txt  run.py  sql_app.db
db/app/: config.py  crud.py  database.py  init.py  main.py  models.py  schemas.py
src/: config.py  logging_config.py
src/analyze/: models.py  routes.py  service.py
src/database/: __init__.py  init_db.py  session.py
src/field/: models.py  routes.py  service.py
src/history/: models.py
src/model/: models.py  routes.py  service.py
src/role/: models.py  routes.py  service.py
src/user/: models.py  routes.py  service.py
src/user_data_fields/: models.py
